Add Lithuanian translation to .desktop.in

--- a/src/audacity.desktop.in
+++ b/src/audacity.desktop.in
@@ -9,6 +9,7 @@ GenericName[el]=Επεξεργαστής ήχου
 GenericName[fr]=Éditeur audio
 GenericName[hi]=ध्वनि संपादक
 GenericName[ja]=オーディオエディタ
+GenericName[lt]=Garsų rengyklė
 GenericName[nl]=Geluidseditor
 GenericName[pt_BR]=Editor de áudio
 GenericName[pt_PT]=Editor de áudio
@@ -25,6 +26,7 @@ Comment[el]=Ηχογράφηση και επεξεργασία αρχείων ή
 Comment[fr]=Enregistrer et éditer des fichiers audio
 Comment[hi]=ऑडियो फ़ाइल अंकित व संपादित करता है
 Comment[ja]=録音とオーディオ編集
+Comment[lt]=Įrašyti ir montuoti garso failus
 Comment[nl]=Audiobestanden opnemen en bewerken
 Comment[pt_BR]=Gravar e editar arquivos de áudio
 Comment[pt_PT]=Gravar e editar ficheiros de áudio
