Update POTFILES.in, audacity.pot and .po files.
Also added script add_nyquist_to_pot.sh which adds the nyquist files.

--- a/locale/POTFILES.in
+++ b/locale/POTFILES.in
@@ -318,6 +318,8 @@ src/commands/SetTrackInfoCommand.cpp
 src/commands/SetTrackInfoCommand.h
 src/commands/Validators.h
 src/configtemplate.h
+src/configunix.h
+src/configwin.h
 src/effects/Amplify.cpp
 src/effects/Amplify.h
 src/effects/AutoDuck.cpp
